# HermesAI

./: .dockerignore  .env-sample  .gitignore  .gitmodules  PLAN.md  README.md  WAITLIST_PLAN.md  docker-compose.override.yml  docker-compose.yml  find.py  keepalive.py  markityper.js  nightly_watcher.py
.github/workflows/: deploy.yml
apps/api/: .env.example  Cargo.toml  Dockerfile  README.md
apps/api/src/: config.rs  errors.rs  main.rs  routes.rs  state.rs  telemetry.rs  util.rs
apps/api/src/cache/: memory.rs  mod.rs
apps/api/src/handlers/: health.rs  mod.rs  terminal.rs
apps/api/src/middleware/: auth.rs
apps/api/src/models/: common.rs  mod.rs  node.rs  terminal.rs
apps/api/src/routes/: file.rs  mod.rs  terminal.rs
apps/api/src/services/: mod.rs  node_client.rs  session_manager.rs
apps/cli/: package.json
apps/cli/modules/markityper/: index.mjs
apps/cli/modules/markityper/adapters/: adapter-micromark.js
apps/client/: README.md
apps/database/: Dockerfile  docker-compose.yml  init.sql
apps/dropcode-client/: .dockerignore  .gitignore  BUGS.md  CHANGELOG.md  Dockerfile  README.md  angular.json  babel.config.js  jest.config.js  karma.conf.js  nginx.conf  package-lock.json  package.json  tsconfig.app.json
apps/dropcode-client/src/: index.html  main.ts  setup-jest.ts  styles.scss
apps/dropcode-client/src/app/: app.component.html  app.component.spec.ts  app.component.test.ts  app.component.ts  app.config.ts  app.routes.ts  app.scss  app.spec.ts  app.ts  canvas.component.ts
apps/dropcode-client/src/app/agent-preview/: agent-preview.html  agent-preview.scss  agent-preview.spec.ts  agent-preview.ts  chat-animation-service.spec.ts  chat-animation-service.ts
apps/dropcode-client/src/app/auth/: auth.service.ts  login.component.html  login.component.scss  login.component.spec.ts  login.component.ts  register.component.html  register.component.spec.ts  register.component.ts
apps/dropcode-client/src/app/features/: features.component.ts
apps/dropcode-client/src/app/home/: home.component.html  home.component.scss  home.component.ts
apps/dropcode-client/src/app/pricing/: pricing.component.ts
apps/dropcode-client/src/app/waitlist/: waitlist.component.html  waitlist.component.scss  waitlist.component.ts  waitlist.service.ts
apps/dropcode-client/src/typings/: markityper.d.ts
apps/pty/: Cargo.toml  Dockerfile  README.md  openai.yaml
apps/pty/config/: logging.toml  sandbox.toml
apps/pty/scripts/: docker-entrypoint.sh  run-dev.sh
apps/pty/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs
apps/pty/src/executor/: cancel.rs  mod.rs  namespaces.rs  pty.rs  spawn.rs
apps/pty/src/io/: stream.rs
apps/pty/src/state/: mod.rs
apps/server/: README.md
apps/tunnel/: Dockerfile
docs/: DigitalOceanDeployment.md  PLAN.md  k8s-plan.md
(+15 files in other folders)
