[package]
name = "agent-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-macros = "0.5.0"
axum-extra = { version = "0.10.3", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = {  version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3.31"
regex = "1.12.2"

