[package]
name = "isolated-exec"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
nix = { version = "0.29", features = ["sched", "mount", "term", "signal", "resource", "fs"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
parking_lot = "0.12"
anyhow = "1"
futures = "0.3"
async-stream = "0.3"
libc = "0.2"
