[package]
name = "isolated-exec"
version = "0.1.3"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-core = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
parking_lot = "0.12"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
# nix features needed for fcntl/dup/execvp/pty
nix = { version = "0.29", features = ["fs", "term", "process"] }
tower-http = { version = "0.6.6", features = ["fs"] }

